--- a/curve_editor/curve_editor.vcxproj
+++ b/curve_editor/curve_editor.vcxproj
@@ -91,7 +91,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <AdditionalIncludeDirectories>$(UserProfile)\source\lib\lua5_1_4_Win32_dll8_lib\include\;$(UserProfile)\source\lib\boost_1_87_0\;$(ProjectDir)\external\json\include\;$(ProjectDir)\external\strconv\;$(ProjectDir)\external\aviutl_exedit_sdk\;$(ProjectDir)\external\cereal\include\;$(ProjectDir)\external\FastNoiseLite\Cpp\;$(ProjectDir)\external\aviutl-mkaul\;$(ProjectDir)\external\sol2\include\;$(ProjectDir)\external\magic_enum\include\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\..\..\IncludingFile\lua5_1_4_Win32_dll8_lib\include\;$(ProjectDir)..\..\..\IncludingFile\boost.1.84.0\;$(ProjectDir)\external\json\include\;$(ProjectDir)\external\strconv\;$(ProjectDir)\external\aviutl_exedit_sdk\;$(ProjectDir)\external\cereal\include\;$(ProjectDir)\external\FastNoiseLite\Cpp\;$(ProjectDir)\external\aviutl-mkaul\;$(ProjectDir)\external\sol2\include\;$(ProjectDir)\external\magic_enum\include\</AdditionalIncludeDirectories>
       <AdditionalOptions>/source-charset:utf-8 /MP %(AdditionalOptions)</AdditionalOptions>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
@@ -99,7 +99,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ModuleDefinitionFile>curve_editor.def</ModuleDefinitionFile>
-      <AdditionalDependencies>$(ProjectDir)external\aviutl-mkaul\mkaul\$(Configuration)\mkaul.lib;$(UserProfile)\source\lib\lua5_1_4_Win32_dll8_lib\lua51.lib;comctl32.lib;d2d1.lib;$(CoreLibraryDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)external\aviutl-mkaul\mkaul\$(Configuration)\mkaul.lib;$(ProjectDir)..\..\..\IncludingFile\lua5_1_4_Win32_dll8_lib\lua51.lib;comctl32.lib;d2d1.lib;$(CoreLibraryDependencies)</AdditionalDependencies>
       <DelayLoadDLLs>lua51.dll</DelayLoadDLLs>
       <AdditionalManifestDependencies>type='Win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='x86' publicKeyToken='6595b64144ccf1df' language='*'</AdditionalManifestDependencies>
     </Link>
@@ -128,7 +128,7 @@ msbuild mkaul\mkaul.vcxproj /p:Configuration=$(Configuration) /p:Platform=$(Plat
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <AdditionalIncludeDirectories>$(UserProfile)\source\lib\lua5_1_4_Win32_dll8_lib\include\;$(UserProfile)\source\lib\boost_1_87_0\;$(ProjectDir)\external\json\include\;$(ProjectDir)\external\strconv\;$(ProjectDir)\external\aviutl_exedit_sdk\;$(ProjectDir)\external\cereal\include\;$(ProjectDir)\external\FastNoiseLite\Cpp\;$(ProjectDir)\external\aviutl-mkaul\;$(ProjectDir)\external\sol2\include\;$(ProjectDir)\external\magic_enum\include\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\..\..\IncludingFile\lua5_1_4_Win32_dll8_lib\include\;$(ProjectDir)..\..\..\IncludingFile\boost.1.84.0\;$(ProjectDir)\external\json\include\;$(ProjectDir)\external\strconv\;$(ProjectDir)\external\aviutl_exedit_sdk\;$(ProjectDir)\external\cereal\include\;$(ProjectDir)\external\FastNoiseLite\Cpp\;$(ProjectDir)\external\aviutl-mkaul\;$(ProjectDir)\external\sol2\include\;$(ProjectDir)\external\magic_enum\include\;$(UserProfile)\.nuget\packages\microsoft.web.webview2\1.0.2592.51\build\native\include;$(UserProfile)\.nuget\packages\microsoft.windows.implementationlibrary\1.0.240803.1\include</AdditionalIncludeDirectories>
       <AdditionalOptions>/source-charset:utf-8 /MP %(AdditionalOptions)</AdditionalOptions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
@@ -140,7 +140,7 @@ msbuild mkaul\mkaul.vcxproj /p:Configuration=$(Configuration) /p:Platform=$(Plat
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <ModuleDefinitionFile>curve_editor.def</ModuleDefinitionFile>
       <DelayLoadDLLs>lua51.dll</DelayLoadDLLs>
-      <AdditionalDependencies>$(ProjectDir)external\aviutl-mkaul\mkaul\$(Configuration)\mkaul.lib;$(UserProfile)\source\lib\lua5_1_4_Win32_dll8_lib\lua51.lib;comctl32.lib;d2d1.lib;$(CoreLibraryDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)external\aviutl-mkaul\mkaul\$(Configuration)\mkaul.lib;$(ProjectDir)..\..\..\IncludingFile\lua5_1_4_Win32_dll8_lib\lua51.lib;comctl32.lib;d2d1.lib;$(CoreLibraryDependencies)</AdditionalDependencies>
       <AdditionalManifestDependencies>type='Win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='x86' publicKeyToken='6595b64144ccf1df' language='*'</AdditionalManifestDependencies>
     </Link>
     <PostBuildEvent>
@@ -148,13 +148,11 @@ msbuild mkaul\mkaul.vcxproj /p:Configuration=$(Configuration) /p:Platform=$(Plat
 
 xcopy /y "$(ProjectDir)@Curve Editor.tra" "$(OutDir)"
 
-rd /s /q "$(OutDir)ui"
-rd /s /q "$(ProjectDir)ui\dist\js"
 cd "$(ProjectDir)ui"
 call npx webpack --mode production
 cd $(SolutionDir)
 xcopy /s /y /i "$(ProjectDir)ui\dist\js" "$(OutDir)ui\js"
-xcopy /y "$(ProjectDir)ui\src\index.html" "$(OutDir)ui"</Command>
+xcopy /y /i "$(ProjectDir)ui\src\index.html" "$(OutDir)ui"</Command>
     </PostBuildEvent>
     <Manifest>
       <AdditionalManifestFiles>
